# calories-tracker

./: .gitignore  .replit  app.py  confirm_foods.html  display.py  food_detector.py  index.html  keep_alive.py  main.py  parser.py  pyproject.toml  render.yaml  replit.nix  requirements.txt  run virtual environment.txt  sheets_writer.py  uptime_robot.txt
data/: food_db.csv  food_singular_map.csv  food_translation_map.csv  unit_singular_map.csv  unit_weights.csv
services/: connect_to_sheets.py
templates/: history.html  index.html  upload.html
utils/: text_utils.py  translation_utils.py
