[tool.poetry]
name = "calories-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
gspread = "^5.12.4"
oauth2client = "^4.1.3"
openpyxl = "^3.1.2"
google-auth = "^2.29.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"